tests/steps/deploy/k8s/templates/deployment_strategy.yaml
# This file was generated by MPyL. DO NOT EDIT DIRECTLY.
---
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    description: This is a test container. For testing the MPL pipelines, not to be
      deployed anywhere.
  labels:
    name: testdeploymentstrategyparameters
    app.kubernetes.io/version: pr-1234
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: testdeploymentstrategyparameters
    app.kubernetes.io/instance: testdeploymentstrategyparameters
    maintainers: MPyL
    maintainer: MPyL
    version: pr-1234
    revision: 2ad3293a7675d08bc037ef0846ef55897f38ec8f
  name: testdeploymentstrategyparameters
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: testdeploymentstrategyparameters
      app.kubernetes.io/name: testdeploymentstrategyparameters
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0%
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: testdeploymentstrategyparameters
        app.kubernetes.io/version: pr-1234
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: testdeploymentstrategyparameters
        app.kubernetes.io/instance: testdeploymentstrategyparameters
        maintainers: MPyL
        maintainer: MPyL
        version: pr-1234
        revision: 2ad3293a7675d08bc037ef0846ef55897f38ec8f
      name: testdeploymentstrategyparameters
    spec:
      containers:
      - env:
        - name: SOME_ENV
          value: PullRequest
        image: registry/image:123
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 99
          grpc:
            port: 123
            service: grpcService
          httpGet:
            path: /health
            port: port-0
          periodSeconds: 30
          successThreshold: 0
          timeoutSeconds: 20
        name: service
        ports:
        - containerPort: 8080
          name: port-0
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 1024Mi
          requests:
            cpu: 100m
            memory: 512Mi
        startupProbe:
          failureThreshold: 60
          httpGet:
            path: /health
            port: port-0
          initialDelaySeconds: 4
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 3
      serviceAccount: testdeploymentstrategyparameters
      serviceAccountName: testdeploymentstrategyparameters
---
# service
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: This is a test container. For testing the MPL pipelines, not to be
      deployed anywhere.
  labels:
    name: testdeploymentstrategyparameters
    app.kubernetes.io/version: pr-1234
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: testdeploymentstrategyparameters
    app.kubernetes.io/instance: testdeploymentstrategyparameters
    maintainers: MPyL
    maintainer: MPyL
    version: pr-1234
    revision: 2ad3293a7675d08bc037ef0846ef55897f38ec8f
  name: testdeploymentstrategyparameters
spec:
  ports:
  - name: 8080-webservice-port
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: testdeploymentstrategyparameters
    app.kubernetes.io/name: testdeploymentstrategyparameters
  type: ClusterIP
---
# testDeploymentStrategyParameters-ingress-0-http
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  labels:
    name: testdeploymentstrategyparameters
    app.kubernetes.io/version: pr-1234
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: testdeploymentstrategyparameters
    app.kubernetes.io/instance: testdeploymentstrategyparameters
    maintainers: MPyL
    maintainer: MPyL
    version: pr-1234
    revision: 2ad3293a7675d08bc037ef0846ef55897f38ec8f
  name: testdeploymentstrategyparameters-ingress-0-http
spec:
  routes:
  - kind: Rule
    match: Host(`testdeploymentstrategyparameters-1234.test-backend.nl`)
    services:
    - name: testdeploymentstrategyparameters
      kind: Service
      port: 8080
    middlewares:
    - name: traefik-https-redirect@kubernetescrd
    - name: testdeploymentstrategyparameters-ingress-0-whitelist
  entryPoints:
  - web
---
# testDeploymentStrategyParameters-ingress-0-https
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  labels:
    name: testdeploymentstrategyparameters
    app.kubernetes.io/version: pr-1234
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: testdeploymentstrategyparameters
    app.kubernetes.io/instance: testdeploymentstrategyparameters
    maintainers: MPyL
    maintainer: MPyL
    version: pr-1234
    revision: 2ad3293a7675d08bc037ef0846ef55897f38ec8f
  name: testdeploymentstrategyparameters-ingress-0-https
spec:
  routes:
  - kind: Rule
    match: Host(`testdeploymentstrategyparameters-1234.test-backend.nl`)
    services:
    - name: testdeploymentstrategyparameters
      kind: Service
      port: 8080
    middlewares:
    - name: testdeploymentstrategyparameters-ingress-0-whitelist
  entryPoints:
  - websecure
  tls:
    secretName: le-custom-prod-wildcard-cert
---
# testdeploymentstrategyparameters-ingress-0-whitelist
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  annotations:
    VPN: 10.0.0.1
  labels:
    name: testdeploymentstrategyparameters
    app.kubernetes.io/version: pr-1234
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: testdeploymentstrategyparameters
    app.kubernetes.io/instance: testdeploymentstrategyparameters
    maintainers: MPyL
    maintainer: MPyL
    version: pr-1234
    revision: 2ad3293a7675d08bc037ef0846ef55897f38ec8f
  name: testdeploymentstrategyparameters-ingress-0-whitelist
spec:
  ipWhiteList:
    sourceRange:
    - 10.0.0.1
